--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,14 @@
 /.pnp
 .pnp.js
 
+/.netlify
+
 /src/ApiKey.js
 # testing
 /coverage
 
 # production
 /build
-.netlify/
 # misc
 .DS_Store
 .env.local
